--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -16,6 +16,9 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 12px;
+  color: rgb(48, 51, 58);
+  font-weight: 600;
 }
 
 input {
@@ -24,4 +27,60 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+a:visited,
+a:link {
+  color: rgba(107, 114, 128);
+  text-decoration: none;
+}
+
+a:hover {
+  color: rgb(48, 51, 58);
+  text-decoration: underline;
+}
+
+.container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header,
+.footer {
+  display: flex;
+  height: auto;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.footer {
+  background: #eee;
+}
+
+.header, 
+.footer, ul {
+  display: inline-flex;
+  list-style: none;
+}
+
+.left-links,
+.right-links {
+  margin: 12px;
+}
+
+.left-links,
+.right-links, li {
+  font-weight: 600px;
+  font-size: large;
+  padding: 8px;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
